--- a/config/config.json
+++ b/config/config.json
@@ -3,14 +3,15 @@
     "username": "root",
     "password": "secret",
     "database": "burgers_db2",
+    "port": 8889,
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "secret",
+    "database": "burgers_db2",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
